--- a/app/views/clientes/_form.html.erb
+++ b/app/views/clientes/_form.html.erb
@@ -2,7 +2,7 @@
 <div class="container">
   <div class="row justify-content-center">
     <div class="col-md-8">
-    <%= link_to "Voltar", clientes_path, class: "btn btn-danger mb-3" %>
+      <%= link_to "Voltar", clientes_path, class: "btn btn-danger mb-3" %>
       <div class="card">
         <div class="card-body">
           <%= form_with(model: cliente, class: "form-horizontal mx-auto") do |form| %>
@@ -20,41 +20,41 @@
             <div class="form-group">
               <%= form.label :nome, class: "control-label" %>
               <div class="col-sm-12">
-                <%= form.text_field :nome, class: "form-control" %>
+                <%= form.text_field :nome, class: "form-control", required: true %>
               </div>
             </div>
 
             <div class="form-group">
               <%= form.label :telefone, class: "control-label" %>
               <div class="col-sm-12">
-                <%= form.text_field :telefone, class: "form-control" %>
+                <%= form.text_field :telefone, class: "form-control", required: true %>
               </div>
             </div>
 
             <div class="form-group">
               <%= form.label :email, class: "control-label" %>
               <div class="col-sm-12">
-                <%= form.text_field :email, class: "form-control" %>
+                <%= form.text_field :email, class: "form-control", required: true %>
               </div>
             </div>
 
             <div class="form-group">
               <%= form.label :rg, class: "control-label" %>
               <div class="col-sm-12">
-                <%= form.text_field :rg, class: "form-control" %>
+                <%= form.text_field :rg, class: "form-control", required: true %>
               </div>
             </div>
 
             <div class="form-group">
               <%= form.label :cpf, class: "control-label" %>
               <div class="col-sm-12">
-                <%= form.text_field :cpf, class: "form-control" %>
+                <%= form.text_field :cpf, class: "form-control", required: true %>
               </div>
             </div>
 
-            <div class="form-group mt-3 text-center"> 
-  <%= form.submit "Adicionar", class: "btn btn-primary col-sm-12", style: "height: 8vh;" %>
-</div>
+            <div class="form-group mt-3 text-center">
+              <%= form.submit "Salvar", class: "btn btn-primary col-sm-12", style: "height: 8vh;" %>
+            </div>
           <% end %>
         </div>
       </div>
