--- a/app/views/equipes/_form.html.erb
+++ b/app/views/equipes/_form.html.erb
@@ -20,16 +20,16 @@
         <!-- Campos do formulário -->
         <div class="form-group">
           <%= form.label :nome %>
-          <%= form.text_field :nome, class: "form-control" %>
+          <%= form.text_field :nome, class: "form-control", required: true %>
         </div>
         <div class="form-group">
           <%= form.label :descricao %>
-          <%= form.text_field :descricao, class: "form-control" %>
+          <%= form.text_field :descricao, class: "form-control", required: true %>
         </div>
 
       
          <div class="form-group mt-3 text-center"> 
-          <%= form.submit "Adicionar" , class: "btn btn-primary col-sm-12", style: "height: 8vh;" %>
+          <%= form.submit "Salvar" , class: "btn btn-primary col-sm-12", style: "height: 8vh;" %>
         </div>
       <% end %>
     </div>
