--- a/app/views/mecanicos/_form.html.erb
+++ b/app/views/mecanicos/_form.html.erb
@@ -20,30 +20,31 @@
         <!-- Campos do formulário -->
         <div class="form-group">
           <%= form.label :nome %>
-          <%= form.text_field :nome, class: "form-control" %>
+          <%= form.text_field :nome, class: "form-control", required: true %>
         </div>
 <div class="form-group">
           <%= form.label :especialidade %>
-          <%= form.text_field :especialidade, class: "form-control" %>
+          <%= form.text_field :especialidade, class: "form-control", required: true %>
         </div>
 
         <div class="form-group">
           <%= form.label :telefone %>
-          <%= form.text_field :telefone, class: "form-control" %>
+          <%= form.text_field :telefone, class: "form-control" , required: true%>
         </div>
 
         <div class="form-group">
           <%= form.label :email %>
-          <%= form.text_field :email, class: "form-control" %>
+          <%= form.text_field :email, class: "form-control", required: true %>
         </div>
 
         <div class="form-group">
-           <%= form.label :equipe_id, class: "form-label" %>
-          <%= form.collection_select(:equipe_id, Equipe.all, :id, :nome, { prompt: 'Selecione a equipe' }, { class: 'form-select' }) %>
-        </div>
+  <%= form.label :equipe_id, class: "form-label" %>
+  <%= form.collection_select(:equipe_id, Equipe.all, :id, :nome, { prompt: 'Selecione a equipe' }, { class: 'form-select', required: true }) %>
+</div>
+
 
          <div class="form-group mt-3 text-center"> 
-          <%= form.submit "Adicionar" , class: "btn btn-primary col-sm-12", style: "height: 8vh;" %>
+          <%= form.submit "Salvar" , class: "btn btn-primary col-sm-12", style: "height: 8vh;" %>
         </div>
       <% end %>
     </div>
