--- a/app/views/pecas/_form.html.erb
+++ b/app/views/pecas/_form.html.erb
@@ -20,26 +20,26 @@
         <!-- Campos do formulário -->
         <div class="form-group">
           <%= form.label :nome %>
-          <%= form.text_field :nome, class: "form-control" %>
+          <%= form.text_field :nome, class: "form-control", required: true %>
         </div>
 <div class="form-group">
           <%= form.label :descricao %>
-          <%= form.text_field :descricao, class: "form-control" %>
+          <%= form.text_field :descricao, class: "form-control", required: true %>
         </div>
 
         <div class="form-group">
           <%= form.label :quantidade %>
-          <%= form.number_field :quantidade, class: "form-control" %>
+          <%= form.number_field :quantidade, class: "form-control", required: true %>
         </div>
 
         <div class="form-group">
           <%= form.label :preco %>
-          <%= form.number_field :preco, class: "form-control" %>
+          <%= form.number_field :preco, class: "form-control", required: true %>
         </div>
 
   
          <div class="form-group mt-3 text-center"> 
-          <%= form.submit "Adicionar" , class: "btn btn-primary col-sm-12", style: "height: 8vh;" %>
+          <%= form.submit "Salvar" , class: "btn btn-primary col-sm-12", style: "height: 8vh;" %>
         </div>
       <% end %>
     </div>
