--- a/app/views/servicos/_form.html.erb
+++ b/app/views/servicos/_form.html.erb
@@ -23,20 +23,20 @@
 
             <div class="mb-3">
               <%= form.label :nome, class: "form-label" %>
-              <%= form.text_field :nome, class: "form-control" %>
+              <%= form.text_field :nome, class: "form-control", required: true %>
             </div>
                <div class="mb-3">
               <%= form.label :descricao, class: "form-label" %>
-              <%= form.text_field :descricao, class: "form-control" %>
+              <%= form.text_field :descricao, class: "form-control", required: true %>
             </div>
 
             <div class="mb-3">
               <%= form.label :valor, class: "form-label" %>
-              <%= form.text_field :valor, class: "form-control" %>
+              <%= form.text_field :valor, class: "form-control", required: true %>
             </div>
 
            <div class="form-group mt-3 text-center"> 
-              <%= form.submit "Adicionar", class: "btn btn-primary col-sm-12", style: "height: 8vh;" %>
+              <%= form.submit "Salvar", class: "btn btn-primary col-sm-12", style: "height: 8vh;" %>
             </div>
           <% end %>
 
